# numerical_recipes

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  linear_algebraic_equations.rs
