[package]
name = "numerical_recipes"
version = "0.0.1"
authors = ["Aidan Bailey"]
edition = "2021"
#rust-version = 
#description =
#documentation = 
readme = "README.md"
#homepage =
repository = "https://github.com/aidan-bailey/numerical_recipes"
license = "MIT"
license-file = "LICENSE"
#keywords =
#categories =
#workspace =
#build =
#links =
#exclude = 
#include = 
#public = 
#metadata = 
#default-run = 
#autobins = 
#autoexamples = 
#autotests = 
#autobenches = 
#resolver = 

[lib]
name = "numerical_recipes"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
